--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
-    "compilerOptions": {
-      "lib": ["ESNext"],
-      "module": "esnext",
-      "target": "esnext",
-      "moduleResolution": "node",
-      // "bun-types" is the important part
-      "types": ["bun-types"]
-    }
+  "compilerOptions": {
+    "lib": ["ESNext"],
+    "module": "esnext",
+    "target": "esnext",
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    // "bun-types" is the important part
+    "types": ["bun-types"]
   }
+}
