--- a/package.json
+++ b/package.json
@@ -2,13 +2,21 @@
   "version": "1.0.109",
   "name": "my-app",
   "devDependencies": {
-    "bun-types": "latest"
+    "bun-types": "latest",
+    "drizzle-kit": "^0.19.13"
   },
   "dependencies": {
-    "hono": "^2.2.5"
+    "@hono/zod-validator": "^0.1.8",
+    "drizzle-orm": "^0.28.6",
+    "hono": "^3.5.8",
+    "jose": "^4.14.6",
+    "postgres": "^3.3.5",
+    "zod": "^3.22.2"
   },
   "scripts": {
-    "start": "bun run src/index.ts"
+    "dev": "bun run --hot src/index.ts",
+    "generate": "drizzle-kit generate:pg",
+    "migrate": "bun run ./src/db/migrate.ts"
   },
   "module": "src/index.js"
 }
