--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "zod": "^3.22.2"
   },
   "scripts": {
+    "start": "bun run src/index.ts",
     "dev": "bun run --hot src/index.ts",
     "generate": "drizzle-kit generate:pg",
     "migrate": "bun run ./src/db/migrate.ts"
